# admin-fram

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/v1/: auth.py  router.py  system.py
backend/app/core/: config.py  deps.py  errors.py  logging.py  responses.py  security.py
backend/app/models/: __init__.py  base.py  system.py
backend/app/schemas/: common.py  system.py
backend/app/services/: auth_service.py  log_service.py  rbac_service.py  system_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_system_tables.py
backend/tests/: test_auth.py  test_config.py  test_errors.py  test_health.py  test_models.py  test_rbac.py  test_system_api.py
docs/guide/: add-module.md  architecture.md  deployment.md  permission-model.md  quick-start.md
docs/superpowers/plans/: 2026-04-30-admin-framework-mvp.md
docs/superpowers/specs/: 2026-04-30-admin-framework-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: auth.ts  client.ts  system.ts
frontend/src/components/: PageTable.vue  PermissionButton.vue  StatusTag.vue  SystemCrudPage.vue
frontend/src/layouts/: AdminLayout.vue
frontend/src/stores/: app.ts  (+2 more)
frontend/tests/: auth-store.spec.ts  login-view.spec.ts  page-table.spec.ts  permission.spec.ts  sidebar-menu.spec.ts  status.spec.ts  system-api.spec.ts  top-bar.spec.ts  user-view-crud.spec.ts
(+26 files in other folders)
