[project]
name = "open-admin-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "bcrypt",
  "fastapi",
  "pydantic-settings",
  "pyjwt",
  "pymysql",
  "python-multipart",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
